--- a/package.json
+++ b/package.json
@@ -2,17 +2,15 @@
   "name": "allergen-menu-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "cheerioAPI.jsx",
+  "scripts":{
+    "start": "cheerioAPI.jsx"
+  },
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "node-fetch": "^2.6.0"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "start": "react-scripts start",
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC"
