--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "allergen-menu-api",
   "version": "1.0.0",
   "description": "",
-  "main": "./cheerioAPI.js",
+  "main": "index.js",
   "scripts":{
-    "start": "./cheerioAPI.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
